<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.malliktalksjava.javatutorials.Home">

    <include layout="@layout/header" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_210"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/earth1"
        android:layout_marginTop="@dimen/dp_50"
        android:textStyle="bold"
        android:visibility="visible"
        android:contentDescription="@string/app_header"/>
    <TextView
        android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/str_popular_tutorials"
    android:textSize="@dimen/sp_18"
        android:textStyle="bold"
    android:layout_marginTop="@dimen/dp_one"
    android:layout_marginBottom="@dimen/dp_sixteen"
    android:layout_marginRight="@dimen/dp_sixteen"
    android:layout_marginLeft="@dimen/dp_sixteen"
        android:layout_below="@+id/imageView"
    />
    <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/str_java"
    android:textSize="@dimen/sp_16"
    android:layout_marginTop="@dimen/dp_one"
    android:layout_marginBottom="@dimen/dp_one"
        android:layout_marginStart="@dimen/dp_twenty_five"
        android:layout_marginEnd="@dimen/dp_sixteen"
    android:layout_marginRight="@dimen/dp_sixteen"
    android:layout_marginLeft="@dimen/dp_twenty_five"
    android:layout_below="@+id/textView1"
    />
    <TextView
     android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/str_micro_services"
    android:textSize="@dimen/sp_16"
    android:layout_marginTop="@dimen/dp_one"
    android:layout_marginBottom="@dimen/dp_one"
    android:layout_marginRight="@dimen/dp_sixteen"
    android:layout_marginLeft="@dimen/dp_twenty_five"
        android:layout_marginStart="@dimen/dp_twenty_five"
        android:layout_marginEnd="@dimen/dp_sixteen"
        android:layout_below="@+id/textView2"
    />
    <TextView
     android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_contact"
    android:textSize="@dimen/sp_18"
        android:textStyle="bold"
    android:layout_marginTop="@dimen/dp_sixteen"
    android:layout_marginBottom="@dimen/dp_sixteen"
    android:layout_marginRight="@dimen/dp_sixteen"
    android:layout_marginLeft="@dimen/dp_sixteen"
        android:layout_marginStart="@dimen/dp_sixteen"
        android:layout_marginEnd="@dimen/dp_sixteen"
    android:layout_below="@+id/textView3"
    />
    <TextView
     android:id="@+id/txtWeb_url"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_web_url"
    android:textSize="@dimen/sp_16"
    android:layout_marginTop="@dimen/dp_one"
    android:layout_marginBottom="@dimen/dp_one"
    android:layout_marginRight="@dimen/dp_sixteen"
    android:layout_marginLeft="@dimen/dp_twenty_five"
        android:layout_marginStart="@dimen/dp_twenty_five"
        android:layout_marginEnd="@dimen/dp_sixteen"
        android:layout_below="@+id/textView4"
        android:autoLink="web"
    />
    <TextView
        android:id="@+id/txtViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_contact_email"
        android:textSize="@dimen/sp_16"
        android:layout_marginTop="@dimen/dp_one"
        android:layout_marginBottom="@dimen/dp_one"
        android:layout_marginRight="@dimen/dp_sixteen"
        android:layout_marginLeft="@dimen/dp_twenty_five"
        android:layout_marginStart="@dimen/dp_twenty_five"
        android:layout_marginEnd="@dimen/dp_sixteen"
        android:layout_below="@+id/txtWeb_url"
        android:autoLink="email"
        />
</RelativeLayout>

</ScrollView>
